@@ -24,6 +24,7 @@ Version 4.3.2  [ under development ]
     TEST SUITE:
         - Added tests for the NPerm class.
         - Added tests for vertex link calculations.
+        - Added tests for the orientable double cover of a triangulation.
 
 Version 4.3.1  [ 5 May, 2006 ]
 
